cmake_minimum_required(VERSION 3.20)
project(FastMassSpring)

file(GLOB SRCS src/*.cpp src/*.h src/*.c)
add_executable(FastMassSpring ${SRCS})

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(FastMassSpring PRIVATE Threads::Threads) # std::thread need pthread lib to be linked

find_package(GLUT REQUIRED)
target_link_libraries(FastMassSpring PRIVATE GLUT::GLUT)

find_package(GLEW REQUIRED)
target_link_libraries(FastMassSpring PRIVATE GLEW::GLEW)

find_package(glm CONFIG REQUIRED)
target_link_libraries(FastMassSpring PRIVATE glm::glm)

find_package(tinyxml CONFIG REQUIRED)
target_link_libraries(FastMassSpring PRIVATE unofficial-tinyxml::unofficial-tinyxml)

find_package(Eigen3 CONFIG REQUIRED)
target_link_libraries(FastMassSpring PRIVATE Eigen3::Eigen)

include_directories(AntTweakBar/include)
target_link_directories(FastMassSpring PRIVATE AntTweakBar/lib)
target_link_libraries(FastMassSpring PRIVATE AntTweakBar64)

#if (NOT EXISTS ${CMAKE_BINARY_DIR}/config)
#    file(COPY config DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
#if (NOT EXISTS ${CMAKE_BINARY_DIR}/scenes)
#    file(COPY scenes DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
#if (NOT EXISTS ${CMAKE_BINARY_DIR}/shaders)
#    file(COPY shaders DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
#if (NOT EXISTS ${CMAKE_BINARY_DIR}/textures)
#    file(COPY textures DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
#if (NOT EXISTS ${CMAKE_BINARY_DIR}/mesh_models)
#    file(COPY mesh_models DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
#if (NOT EXISTS ${CMAKE_BINARY_DIR}/obj_models)
#    file(COPY obj_models DESTINATION ${CMAKE_BINARY_DIR})
#endif ()
if (NOT EXISTS ${CMAKE_BINARY_DIR}/AntTweakBar64.dll)
    file(COPY AntTweakBar/lib/AntTweakBar64.dll DESTINATION ${CMAKE_BINARY_DIR})
endif ()

add_definitions(-DDEFAULT_VERT_SHADER_FILE="${CMAKE_SOURCE_DIR}/shaders/vert.glsl")
add_definitions(-DDEFAULT_FRAG_SHADER_FILE="${CMAKE_SOURCE_DIR}/shaders/frag.glsl")
add_definitions(-DDEFAULT_SCENE_FILE="${CMAKE_SOURCE_DIR}/scenes/test_scene.xml")
add_definitions(-DDEFAULT_CONFIG_FILE="${CMAKE_SOURCE_DIR}/config/config.txt")
add_definitions(-DDEFAULT_CLOTH_STATE_FILE="${CMAKE_SOURCE_DIR}/config/cloth.txt")
add_definitions(-DDEFAULT_TEXTURE_FILE="${CMAKE_SOURCE_DIR}/textures/chinese_porcelain_1.png")
add_definitions(-DDEFAULT_SCREEN_SHOT_FILE="${CMAKE_SOURCE_DIR}/output/ScreenShot.png")
add_definitions(-DDEFAULT_OUTPUT_CLOTH_STATE_FILE="${CMAKE_SOURCE_DIR}/output/cloth.txt")
add_definitions(-DDEFAULT_OUTPUT_OBJ_FILE="${CMAKE_SOURCE_DIR}/output/cloth.obj")
add_definitions(-DDEFAULT_MODEL="${CMAKE_SOURCE_DIR}/mesh_models/frog_reg.mesh")
add_definitions(-DDEFAULT_OBJ_MODEL="${CMAKE_SOURCE_DIR}/obj_models/bunny.obj")
